grid draws on screen 4real now

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ style {
   display: none;
 }
 
-/* ----------------------------- */
+/* Hiding them temporarily for now */
 
 body{
   flex-direction: column;
