--- a/src/style.css
+++ b/src/style.css
@@ -83,49 +83,27 @@ button{
 
 .middle{
   background-color: #1F2937;
-  min-height: 1300px;
-  min-width: 2000px;
+  min-height: 85%;
+  min-width: 85%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.etchPanel{
-  padding: 30px;
-  background-color: red;
-  padding-bottom: 90px;
-  border: 5px solid black;
-  border-radius: 12px;
-  box-shadow: 10px 10px #999999;
-}
-
-.screen{
-  padding: 10px;
-  border-radius: 55px;
-  background-color: slategray;
-}
-
 .grid{
-  padding: 24px;
-  border-radius: 55px;
-  flex: none;
   display: inline-grid;
   /* grid colums and rows defined in grid.js */
-  border-radius: 55px;
   height: 900px;
   width: 900px;
   background-color: gray;
 }
 
 .cell{
- flex: none;
  background-color: #ffffff;
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
-
-.dark{
- background-color: black;
-}
-
 
 .footer{
   justify-content: center;
