--- a/src/style.css
+++ b/src/style.css
@@ -85,9 +85,17 @@ button{
   background-color: #1F2937;
   min-height: 85%;
   min-width: 85%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 20% 60% 20%;
+  grid-template-rows: 10% 80%;
+}
+
+#posContainer{
+  grid-column-start: 2;
+}
+
+.posText{
+  font-size: 40px;
 }
 
 .grid{
@@ -103,6 +111,7 @@ button{
  display: flex;
  justify-content: center;
  align-items: center;
+ font-size: 10px;
 }
 
 .footer{
